<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
        <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">name</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="toppings">toppings</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="whipped_cream">Whipped cream</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="chocolate">Chocolate</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=5] -->
    <string name="initial_quantity_value">1</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="order">Order</string>

    <!--
       Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
       user's name. [CHAR LIMIT=NONE] -
        Эътибор беринг қуйидаги сатр мисол тариқасида бошқа йўл билан белгиланди. Буни афзаллик томони агарда таржимонлар мазкур сатрни боқа тилга таржима қилиши натижасида исмдан кейин сатр номи
        чиқиши керак бўлса яъни,"Amy:Name" чиқарилиши керак бўлса ":Name" сўзини исм қийматидан кейин ёзиши мумкин.

     -->
    <string name="order_summary_name"> Name:<xliff:g id="customer" example="Amy">%s</xliff:g></string>

    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="cream" example="true">%s</xliff:g></string>

    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="choco" example="true">%s</xliff:g></string>

    <string name="quantity_coffee">Quantity: <xliff:g id="quantity" example="1">%d</xliff:g></string>

    <string name="total_price">Total: <xliff:g id="price" example="5">%s</xliff:g></string>

    <string name="thank_you">Thank you!</string>

    <string name="can_not_have_more100">You cannot have more than 100 coffee</string>

    <string name="can_not_have_less1">You cannot have less than 1 coffee</string>

    <string name="yesCream">yes</string>

    <string name="noCream">no</string>

    <string name="yesChoco">yes</string>

    <string name="noChoco">no</string>

    <string name="order_for">JustJava order for <xliff:g id="name" example="order for">%s</xliff:g></string>


</resources>
